// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie cookie store should sign cookies 1`] = `
Object {
  "set-cookie": Array [
    "a=eyJ0ZXN0Ijp0cnVlfQ.bLV-DyDZU2MJtawpR5hTp-Nskbs",
    "b=ImFiYyI.fXPvT2wfAEu90_PeF3YxYc6Nr48",
  ],
}
`;

exports[`servie cookie store should work with regular cookies 1`] = `
Object {
  "set-cookie": Array [
    "a=eyJ0ZXN0Ijp0cnVlfQ",
    "b=ImFiYyI",
  ],
}
`;
